--- a/_includes/case-details.html
+++ b/_includes/case-details.html
@@ -44,7 +44,7 @@
         <li><hr class="dropdown-divider"></li>
         <li><h6 class="dropdown-header">Case</h6></li>
         <li><a class="dropdown-item" href="#">Access</a></li>
-        <li><a class="dropdown-item" href="/case-view/timeline-alternate">Timeline</a></li>
+        <li><a class="dropdown-item" href="/case-view/timeline">Timeline</a></li>
         <li><a class="dropdown-item" href="#">Close case</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><h6 class="dropdown-header">Other cases</h6></li>
