--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="footer-links text-end">
-  <ul class="pe-5">
-    <li><a href="/accessibility">Accessibility</a></li>
-    <li><a href="/cookies">Cookies</a></li>
-    <li><a href="/help">Help</a></li>
-    <li><a href="/privacy">Privacy</a></li>
+<footer class="py-4">
+  <ul class="nav flex-column flex-md-row justify-content-md-center ms-2">
+    <li class="ms-4 py-1"><a href="/accessibility">Accessibility</a></li>
+    <li class="ms-4 py-1"><a href="/cookies">Cookies</a></li>
+    <li class="ms-4 py-1"><a href="/help">Help</a></li>
+    <li class="ms-4 py-1"><a href="/privacy">Privacy</a></li>
   </ul>
 </footer>
