--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -201,7 +201,7 @@ hr {
 }
 
 hr:not([size]) {
-  height: 2px;
+  height: 1px;
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
@@ -2465,7 +2465,7 @@ progress {
   color: #282828;
   background-color: #ffffff;
   background-clip: padding-box;
-  border: 2px solid #c2c2c2;
+  border: 1px solid #c2c2c2;
   appearance: none;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3185,7 +3185,7 @@ textarea.form-control-lg {
   cursor: pointer;
   user-select: none;
   background-color: transparent;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -11275,6 +11275,14 @@ textarea.form-control-lg {
   position: sticky;
   top: 0;
   z-index: 1020;
+}
+
+.toc {
+  top: 5rem;
+}
+
+element.style {
+    top: 5rem;
 }
 
 @media (min-width: 576px) {
