New advice form

--- a/_includes/actions-advice.html
+++ b/_includes/actions-advice.html
@@ -1,5 +1,6 @@
 <div class="row sticky-top bg-body py-3 my-2">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-end align-items-center">
+    <span class="badge rounded-pill text-bg-warning me-2">7/9 Complete</span>
     <a class="btn btn-neutral-50 ms-2" href="assessment"><i class="fal fa-arrow-circle-left"></i><span class="d-none d-md-inline-block ms-2">Back</span></a>
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-file-download"></i><span class="d-none d-md-inline-block ms-2">Download</span></a>
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-save"></i><span class="d-none d-md-inline-block ms-2">Save</span></a>
