White body background

--- a/_includes/actions-timeline.html
+++ b/_includes/actions-timeline.html
@@ -1,4 +1,4 @@
-<div class="row sticky-top bg-body py-3 my-2">
+<div class="row sticky-top py-3 my-2">
   <div class="d-flex justify-content-end">
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-search"></i></a>
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-filter"></i></a>
