--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -187,7 +187,7 @@ body {
   line-height: var(--body-line-height);
   color: var(--body-color);
   text-align: var(--body-text-align);
-  background-color: var(--body-bg);
+  /*background-color: var(--body-bg);*/
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -7725,7 +7725,6 @@ textarea.form-control-lg {
 }
 
 .card-footer {
-  padding: 1rem;
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
