--- a/_includes/actions-assessment.html
+++ b/_includes/actions-assessment.html
@@ -1,4 +1,4 @@
-<div class="row sticky-top py-3 my-2">
+<div class="row sticky-top bg-body py-3 my-2">
   <div class="d-flex justify-content-between">
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-arrow-circle-left me-2"></i>Previous<span class="d-none d-md-inline-block ms-1">:: Decision</span></a>
     <div class="d-flex">
