--- a/_includes/actions-new-request.html
+++ b/_includes/actions-new-request.html
@@ -1,4 +1,4 @@
-<div class="row mb-6 sticky-top py-5">
+<div class="row mb-6 sticky-top bg-body py-5">
   <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-file-download me-2"></i>Download</a>
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-trash-alt me-2"></i>Delete</a>
