Project tidy up

--- a/_includes/actions-advice.html
+++ b/_includes/actions-advice.html
@@ -4,7 +4,7 @@
     <a class="btn btn-neutral-50 ms-2" href="assessment"><i class="fal fa-arrow-circle-left"></i><span class="d-none d-md-inline-block ms-2">Back</span></a>
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-file-download"></i><span class="d-none d-md-inline-block ms-2">Download</span></a>
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-save"></i><span class="d-none d-md-inline-block ms-2">Save</span></a>
-    <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-paper-plane"></i><span class="d-none d-md-inline-block ms-2">Submit</span></a>
+    <a class="btn btn-neutral-50 ms-2 disabled" href="#"><i class="fal fa-paper-plane"></i><span class="d-none d-md-inline-block ms-2">Submit</span></a>
 
   </div>
 </div>
