--- a/_includes/filter-users.html
+++ b/_includes/filter-users.html
@@ -1,4 +1,4 @@
-<div class="bg-white idx-border p-4">
+<div class="bg-neutral-25 idx-border p-4">
   <div class="row">
     <h6 class="card-heading mt-0 mb-2">Roles</h6>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
