--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="py-4">
   <ul class="nav flex-column flex-md-row justify-content-md-end ms-2 me-6">
-    <li class="ms-4 py-1"><a href="/accessibility">Accessibility</a></li>
-    <li class="ms-4 py-1"><a href="/cookies">Cookies</a></li>
-    <li class="ms-4 py-1"><a href="/help">Help</a></li>
-    <li class="ms-4 py-1"><a href="/privacy">Privacy</a></li>
+    <li class="ms-4 py-1"><a class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/accessibility">Accessibility</a></li>
+    <li class="ms-4 py-1"><a class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/cookies">Cookies</a></li>
+    <li class="ms-4 py-1"><a class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/help">Help</a></li>
+    <li class="ms-4 py-1"><a class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/privacy">Privacy</a></li>
   </ul>
 </footer>
