--- a/_includes/product-info.html
+++ b/_includes/product-info.html
@@ -1,4 +1,4 @@
 <div class="mt-8 text-muted">
-  <p class="mb-0">The EHC Hub is provided by <a href="https://www.idoxgroup.com/" target="_blank">Idox plc</a></p>
+  <p class="mb-0">The EHC Hub is provided by <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://www.idoxgroup.com/" target="_blank">Idox plc</a></p>
   <p>Version x.x.x</p>
 </div>
