--- a/_includes/filter-cases.html
+++ b/_includes/filter-cases.html
@@ -1,4 +1,4 @@
-<div class="bg-white idx-border p-4">
+<div class="bg-neutral-25 idx-border p-4">
   <div class="row">
     <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
       <div class="dropdown idox-status-dropdown">
