--- a/_includes/search-users.html
+++ b/_includes/search-users.html
@@ -1,6 +1,6 @@
 <form class="my-7">
-  
-  <div class="row my-7">
+
+  <div class="row">
     <div class="col d-flex">
       <div class="flex-grow-1">
         <div class="input-group">
@@ -16,7 +16,7 @@
     </div>
   </div>
 
-  <div class="collapse p-3" id="search-filters">
+  <div class="collapse py-3" id="search-filters">
     {% include filter-users.html %}
   </div>
 
