--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -2467,7 +2467,7 @@ progress {
   background-clip: padding-box;
   border: 1px solid #c2c2c2;
   appearance: none;
-  border-radius: 0.25rem;
+  border-radius: 0.4rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -3187,7 +3187,7 @@ textarea.form-control-lg {
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
-  border-radius: 0.25rem;
+  border-radius: 0.4rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -7666,7 +7666,7 @@ textarea.form-control-lg {
   background-color: #ffffff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0;
+  border-radius: 0.4rem;
 }
 .card > hr {
   margin-right: 0;
@@ -7721,7 +7721,7 @@ textarea.form-control-lg {
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-header:first-child {
-  border-radius: 0 0 0 0;
+  border-radius: 0.4rem 0.4rem 0 0;
 }
 
 .card-footer {
@@ -7729,7 +7729,7 @@ textarea.form-control-lg {
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-footer:last-child {
-  border-radius: 0 0 0 0;
+  border-radius: 0 0 0.4rem 0.4rem;
 }
 
 .card-header-tabs {
@@ -8739,12 +8739,12 @@ textarea.form-control-lg {
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .list-group-item:first-child {
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
+  border-top-left-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
 }
 .list-group-item:last-child {
-  border-bottom-right-radius: inherit;
-  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: 0.4rem;
+  border-bottom-left-radius: 0.4rem;
 }
 .list-group-item.disabled, .list-group-item:disabled {
   color: #6c757d;
@@ -10788,10 +10788,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #0a1f8f;
+  color: var(--primary) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #081972;
+  color: var(--primary-600) !important;
 }
 
 .link-secondary {
@@ -13630,6 +13630,11 @@ element.style {
 .rounded-top {
   border-top-left-radius: 0.125rem !important;
   border-top-right-radius: 0.125rem !important;
+}
+
+.rounded-top-4 {
+  border-top-left-radius: 0.4rem !important;
+  border-top-right-radius: 0.4rem !important;
 }
 
 .rounded-end {
@@ -18356,7 +18361,7 @@ h3, .h3 {
 }*/
 
 .table th, .table td {
-  padding: 0.25rem 0.75rem;
+  padding: 0.5rem 0.75rem;
 }
 
 .table th.idx-table-actions-col,
