--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -7717,7 +7717,7 @@ textarea.form-control-lg {
   padding: 0.75rem 1rem;
   margin-bottom: 0;
   /* background-color: rgba(0, 0, 0, 0.03); */
-  background-color: var(--secondary-50);
+  background-color: var(--success-50);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-header:first-child {
