--- a/_includes/search-cases.html
+++ b/_includes/search-cases.html
@@ -9,18 +9,19 @@
       </div>
       <div class="d-flex justify-content-end">
         <a class="btn btn-neutral-50 no-wrap ms-2" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="fal fa-filter"></i><span class="d-none d-md-inline-block ms-2">Filters</span></a>
+        <a class="btn btn-neutral-50 no-wrap ms-2" href="#"><i class="fal fa-undo"></i><span class="d-none d-md-inline-block ms-2">Clear</span></a>
         <div class="dropdown ms-2">
           <a class="btn btn-neutral-50 dropdown-toggle no-wrap" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fal fa-bookmark"></i><span class="d-none d-md-inline-block ms-2">Saved</span>
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Save search</a></li>
+            <li><a class="dropdown-item" href="#">Manage saved</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><h6 class="dropdown-header">Saved searches</h6></li>
             <li><a class="dropdown-item text-muted" href="#" disabled>None saved</a></li>
           </ul>
         </div>
-        <a class="btn btn-neutral-50 no-wrap ms-2" href="#"><i class="fal fa-undo"></i><span class="d-none d-md-inline-block ms-2">Clear</span></a>
       </div>
     </div>
   </div>
