--- a/_includes/case-details.html
+++ b/_includes/case-details.html
@@ -43,6 +43,7 @@
         <li><a class="dropdown-item" href="#">Change picture</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><h6 class="dropdown-header">Case</h6></li>
+        <li><a class="dropdown-item" href="/case-view">Home</a></li>
         <li><a class="dropdown-item" href="#">Access</a></li>
         <li><a class="dropdown-item" href="/case-view/timeline">Timeline</a></li>
         <li><a class="dropdown-item" href="#">Close case</a></li>
