--- a/_includes/actions-advice-team-response.html
+++ b/_includes/actions-advice-team-response.html
@@ -1,4 +1,4 @@
-<div class="row sticky-top bg-body py-3 my-2">
+<div class="row sticky-top sticky-top-correction bg-body py-3 my-2">
   <div class="d-flex justify-content-end align-items-center">
     <a class="btn btn-neutral-50 ms-2" href="assessment-team-manager"><i class="fal fa-arrow-circle-left"></i><span class="d-none d-md-inline-block ms-2">Back</span></a>
     <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-file-download"></i><span class="d-none d-md-inline-block ms-2">Download</span></a>
