--- a/_includes/actions-assessment-team-manager.html
+++ b/_includes/actions-assessment-team-manager.html
@@ -1,4 +1,4 @@
-<div class="row sticky-top bg-body py-3 my-2">
+<div class="row sticky-top sticky-top-correction bg-body py-3 my-2">
   <div class="d-flex justify-content-between">
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-arrow-circle-left me-2"></i>Step 2<span class="d-none d-md-inline-block ms-1">:: Decision</span></a>
     <a class="btn btn-neutral-50 me-2" href="/case-view/advice-team-response"><i class="fal fa-envelope-open-text me-2"></i>Manage Response</a>
