--- a/_includes/actions-report.html
+++ b/_includes/actions-report.html
@@ -1,4 +1,4 @@
-<div class="row mb-6 sticky-top bg-body py-5">
+<div class="row mb-6 sticky-top sticky-top-correction bg-body py-5">
   <div class="col-lg-6 d-flex align-items-center">
     <strong>Status:</strong><span class="ms-2">Draft</span>
   </div>
