--- a/_includes/actions-views.html
+++ b/_includes/actions-views.html
@@ -1,4 +1,4 @@
-<div class="row mb-6 sticky-top bg-body py-5">
+<div class="row mb-6 sticky-top sticky-top-correction bg-body py-5">
   <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-save me-2"></i>Save</a>
     <a class="btn btn-neutral-50 disabled" href="#"><i class="fal fa-arrow-circle-right me-2"></i>Progress to meeting</a>
