--- a/_includes/modal-logout.html
+++ b/_includes/modal-logout.html
@@ -6,8 +6,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Are you sure that you wish to logout of the EHC Hub?</p>
-        <p>Choose <strong>No</strong> to continue working or <strong>Yes, logout</strong> to leave the EHC Hub.</p>
+        <p>Are you sure that you wish to logout of the SEND Hub?</p>
+        <p>Choose <strong>No</strong> to continue working or <strong>Yes, logout</strong> to leave the SEND Hub.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-neutral-50" data-bs-dismiss="modal">No</button>
