--- a/_includes/actions-summary.html
+++ b/_includes/actions-summary.html
@@ -1,4 +1,4 @@
-<div class="row mb-6 sticky-top bg-body py-5">
+<div class="row mb-6 sticky-top sticky-top-correction bg-body py-5">
   <div class="dropdown col-lg-6 d-flex align-items-center">
     <span class="text-neutral-500">Next review due: 2 Dec 2020</span>
     <a href="#" class="ms-3"><i class="fal fa-pencil-alt me-1"></i>Edit</a>
