--- a/_includes/header-anon.html
+++ b/_includes/header-anon.html
@@ -1,9 +1,5 @@
-<header>
-  <nav class="py-2 navbar top bg-primary main-header">
-    <div class="container-fluid">
-
-      <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">EHC Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
-
-    </div>
-  </nav>
-</header>
+<nav class="py-2 navbar bg-primary sticky-top">
+  <div class="container-fluid">
+    <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">SEND Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
+  </div>
+</nav>
