--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,21 +1,19 @@
-<header>
-  <nav class="py-2 navbar top bg-primary main-header">
-    <div class="container-fluid">
-      <a class="d-block d-md-none text-white align-self-center px-4" role="button" data-bs-toggle="collapse" href="#idx-sidenav" aria-controls="idx-sidenav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="visually-hidden">Side menu</span><i class="far fa-bars" aria-hidden="true"></i>
-      </a>
-      <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">EHC Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
-      <a class="d-block d-md-none text-white align-self-center px-3" role="button" data-bs-toggle="collapse" href="#idx-usernav" aria-controls="idx-usernav" aria-expanded="false" aria-label="Toggle user options">
-          <span class="visually-hidden">User menu</span><i class="far fa-question-circle idx-nav-icon" aria-hidden="true"></i>
-      </a>
-      <div class="d-none d-md-block pull-right">
-        <a class="text-white me-4" href="/user-profile" data-bs-toggle="tooltip" data-bs-title="Profile"><i class="fal fa-user-circle idx-nav-icon" aria-hidden="true"></i> Bob Schneider</a>
-        <a class="text-white me-4" href="/help" data-bs-toggle="tooltip" data-bs-title="Help"><i class="fal fa-question-circle idx-nav-icon" aria-hidden="true" title="Help"></i></a>
-        <a class="text-white me-4" data-bs-toggle="modal" data-bs-target="#logoutModal" type="button" tabindex="0"><i class="fal fa-sign-out idx-nav-icon" aria-hidden="true" data-bs-toggle="tooltip" data-bs-title="Logout" ></i></a>
-      </div>
+<nav class="navbar sticky-top bg-primary py-2">
+  <div class="container-fluid">
+    <a class="d-block d-md-none text-white align-self-center px-4" role="button" data-bs-toggle="collapse" href="#idx-sidenav" aria-controls="idx-sidenav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="visually-hidden">Side menu</span><i class="far fa-bars" aria-hidden="true"></i>
+    </a>
+    <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">SEND Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
+    <a class="d-block d-md-none text-white align-self-center px-3" role="button" data-bs-toggle="collapse" href="#idx-usernav" aria-controls="idx-usernav" aria-expanded="false" aria-label="Toggle user options">
+        <span class="visually-hidden">User menu</span><i class="far fa-question-circle idx-nav-icon" aria-hidden="true"></i>
+    </a>
+    <div class="d-none d-md-block pull-right">
+      <a class="text-white me-4" href="/user-profile" data-bs-toggle="tooltip" data-bs-title="Profile"><i class="fal fa-user-circle idx-nav-icon" aria-hidden="true"></i> Bob Schneider</a>
+      <a class="text-white me-4" href="/help" data-bs-toggle="tooltip" data-bs-title="Help"><i class="fal fa-question-circle idx-nav-icon" aria-hidden="true" title="Help"></i></a>
+      <a class="text-white me-4" data-bs-toggle="modal" data-bs-target="#logoutModal" type="button" tabindex="0"><i class="fal fa-sign-out idx-nav-icon" aria-hidden="true" data-bs-toggle="tooltip" data-bs-title="Logout" ></i></a>
     </div>
-  </nav>
-  {% include usernav.html %}
-</header>
+  </div>
+</nav>
+{% include usernav.html %}
 
 {% include modal-logout.html %}
