--- a/_includes/sidenav-parent.html
+++ b/_includes/sidenav-parent.html
@@ -1,6 +1,6 @@
 <aside class="idx-sidenav d-md-block border-end" id="idx-sidenav">
     <!-- #BeginLibraryItem "/Library/Contents.lbi" -->
-    <nav class="collapse idx-links sticky-top d-block" aria-label="EHC Hub navigation">
+    <nav class="collapse idx-links sticky-top d-block" aria-label="SEND Hub navigation">
         <ul class="list-unstyled d-flex flex-column mb-0 pt-1 pb-5 px-4" id="idx-menu">
           <li class="pt-6 pb-1 mx-md-auto"><a href="/parent-dash"><i class="fal fa-home idx-nav-icon fa-fw" aria-hidden="true" title="Home"></i><span class="d-md-none ms-2">Home</span></a></li>
           <li class="pt-6 pb-1 mx-md-auto"><a href="#"><i class="fal fa-calendar-alt idx-nav-icon fa-fw" aria-hidden="true" title="Panel meetings"></i><span class="d-md-none ms-2">Panel meetings</span></a></li>
